<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/midnight_blue"
    android:layout_gravity="center_horizontal"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/wet_asphalt"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ShowReminderTextId"
                android:layout_width="wrap_content"
                android:textColor="@color/clouds"
                android:layout_height="match_parent"
                android:text="@string/no_reminder"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ShowReminderIdTextId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/id" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ShowTimeTextId"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/Time"
                android:textColor="@color/clouds"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/ShowDateTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/Date"
                android:textColor="@color/clouds"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>