<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_blue"
    android:orientation="vertical"
    tools:context=".AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:text="@string/AboutUs"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/clouds"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="30dp"
                android:text="@string/about_text"
                android:textColor="@color/concrete"
                android:textSize="20sp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center_horizontal"
                android:text="@string/Members"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/clouds"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="30dp"
                android:text="@string/MembersName"
                android:textColor="@color/concrete"
                android:textSize="20sp"

                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/transparent_logo" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>