<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/midnight_blue"
    android:padding="10dp"
    tools:context=".Purchase">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="Medicine Name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/ageedittextid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="Quantity"
                android:inputType="number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/nameEditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="Medicine Name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/ageedittextid1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="Quantity"
                android:inputType="number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/nameEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="@string/medicine_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/ageedittextid2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/nameEditText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="@string/medicine_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/ageedittextid3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/clouds"
                android:textColorHint="@color/concrete"
                android:background="@color/wet_asphalt"
                android:layout_margin="10dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <Button
                android:id="@+id/savebuttonid"

                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/confirm" />

            <!--<Button-->
            <!--android:layout_marginTop="10dp"-->

            <!--style="@style/Base.Widget.AppCompat.Button.Colored"-->
            <!--android:text="Show Order"-->
            <!--android:id="@+id/loadbuttonid"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->
        </LinearLayout>


    </ScrollView>
</LinearLayout>